--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -97,6 +97,14 @@
     padding: var(--space-2) var(--space-3);
   }
 
+  /* Post Images */
+  .post-images img:only-child {
+    max-height: 320px;
+  }
+  .post-images img:not(:only-child) {
+    height: 160px;
+  }
+
   /* Profile */
   .profile-cover-image,
   .profile-cover-empty {
@@ -236,6 +244,12 @@
   }
   .modal-header {
     padding: var(--space-3) var(--space-4);
+  }
+  .post-images img:only-child {
+    max-height: 240px;
+  }
+  .post-images img:not(:only-child) {
+    height: 120px;
   }
   .notification-dropdown {
     width: 280px;
